--- a/SimpleSecuredApp/pom.xml
+++ b/SimpleSecuredApp/pom.xml
@@ -67,6 +67,11 @@
 			<artifactId>jquery</artifactId>
 			<version>2.1.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
+			<version>2.1.2.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
